# lgmath

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  Dockerfile  Dockerfile.ROS2  INSTALL.md  INSTALL.txt  Jenkinsfile  LGMathConfig.cmake.in  README.md  lgmathConfig.cmake.in  package.xml
.catkin_tools/: .gitignore
.catkin_tools/profiles/default/: config.yaml
benchmarks/: RotationSpeedTest.cpp  SE3SpeedTest.cpp  SO3SpeedTest.cpp  TransformSpeedTest.cpp  TransformWithCovarianceSpeedTest.cpp
ci/config/: default.yaml  ocv3.yaml
ci/yamlrun/: autobuild.yaml
cmake/: FindEigen3.cmake
doc/: Doxyfile.in
include/: lgmath.hpp
include/lgmath/: CommonMath.hpp  CommonTools.hpp  SE3.hpp  SO3.hpp  Transformation.hpp
include/lgmath/r3/: Operations.hpp  Types.hpp
include/lgmath/se2/: Operations.hpp  Transformation.hpp  TransformationWithCovariance.hpp  Types.hpp
include/lgmath/se3/: Operations.hpp  Transformation.hpp  TransformationWithCovariance.hpp  Types.hpp
include/lgmath/so2/: Operations.hpp  Rotation.hpp  Types.hpp
include/lgmath/so3/: Operations.hpp  Rotation.hpp  Types.hpp
samples/: CMakeLists.txt  PrecisionTimer.hpp  RotationSpeedTest.cpp  SE3SpeedTest.cpp  SO3SpeedTest.cpp  TransformSpeedTest.cpp  TransformWithCovarianceSpeedTest.cpp
src/: CommonMath.cpp  SE3.cpp  SO3.cpp  Transformation.cpp
src/r3/: Operations.cpp
src/se2/: Operations.cpp  Transformation.cpp  TransformationWithCovariance.cpp
src/se3/: Operations.cpp  Transformation.cpp  TransformationWithCovariance.cpp
src/so2/: Operations.cpp  Rotation.cpp
src/so3/: Operations.cpp  Rotation.cpp
tests/: CMakeCache.txt  CMakeLists.txt  ConversionTests.cpp  CovarianceTests.cpp  RotationTests.cpp  SE2Tests.cpp  SE2TransformTests.cpp  SE2TransformWithCovarianceTests.cpp  SE3Tests.cpp  SO2Tests.cpp  SO3Tests.cpp  TransformTests.cpp  TransformWithCovarianceTests.cpp  main.cpp
